Added functionality for document class

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /.idea/shelf/Uncommitted_changes_before_Update_at_10_22_23__8_59_PM__Changes_.xml
 /.idea/workspace.xml
 /.idea/shelf/Uncommitted_changes_before_Update_at_10_22_23,_8_59_PM_[Changes]/shelved.patch
+/dist/dirlin-0.1.7.tar.gz
+/dist/dirlin-0.1.7-py3-none-any.whl
