Added functionality for document class

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 /.idea/shelf/Uncommitted_changes_before_Update_at_10_22_23,_8_59_PM_[Changes]/shelved.patch
 /dist/dirlin-0.1.7.tar.gz
 /dist/dirlin-0.1.7-py3-none-any.whl
+/dist/dirlin-0.1.8.tar.gz
+/dist/dirlin-0.1.8-py3-none-any.whl
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/misc.xml
+/.idea/shelf/Uncommitted_changes_before_Checkout_at_10_29_23__2_01_AM__Changes_.xml
+/.idea/vcs.xml
