--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 pathlib
-poetry
 openpyxl
-xlrd=2.0.1
-pyxlsb=1.0.10
-numpy=2.0.0
-pandas=2.2.2
-setuptools~=68.0.0
+xlrd==2.0.1
+openpyxl
+numpy==2.0.0
+pandas==2.2.2
+chardet==5.2.0
