--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /dist/dirlin-0.1.10.tar.gz
 /dist/dirlin-0.1.10-py3-none-any.whl
-!/test/test_pipeline.py
+!/test/test_pipelines/test_pipeline.py
 !/reorg_logic.md
