--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Dirlin"
-version = "0.3.11"
+version = "0.3.12"
 description = "Handy functions for local files"
 authors = ["mendozasho"]
 readme = "README.md"
@@ -9,18 +9,18 @@ packages = [{include = "dirlin"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pathlib = "~1.0.1"
-openpyxl = "*"
+pathlib = "1.0.1"
+openpyxl = "3.1.2"
 xlrd = "2.0.1"
-pandas = "2.0.2"
+pandas = "2.2.2"
 chardet = "5.2.0"
-numpy = "<2.0.0"
-tqdm = "~4.67.1"
+numpy = "2.0.0"
+tqdm = "4.67.1"
 pyxlsb="1.0.10"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "~8.3.5"
-setuptools = "~80.1.0"
+pytest = "8.3.5"
+setuptools = "80.1.0"
 
 [build-system]
 requires = ["poetry-core"]
