--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,19 +9,18 @@ packages = [{include = "dirlin"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pathlib = "1.0.1"
-openpyxl = "3.1.2"
+openpyxl = "*"
 xlrd = "2.0.1"
-pandas = "2.2.2"
+pandas = "2.0.2"
 chardet = "5.2.0"
-numpy = "2.0.0"
-tqdm = "4.67.1"
-pyxlsb="1.0.10"
+numpy = "<2.0.0"
+tqdm = "~4.67.1"
+pyxlsb = "1.0.10"
 pdfplumber = "0.11.6"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "8.3.5"
-setuptools = "80.1.0"
+pytest = "^8.3"
+setuptools = "^80"
 
 [build-system]
 requires = ["poetry-core"]
