Fixed basic PDF handling so we can possibly use it again

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "tqdm~=4.67.1",
     "pyxlsb==1.0.10",
     "pdfplumber==0.11.6",
-    "pypdf==5.6.0"
+    "pypdf==5.6.0",
+    "pypdf2"
 ]
 
 [tool.poetry.group.dev.dependencies]
