--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ tqdm~=4.67.1
 pyxlsb==1.0.10
 setuptools~=80.1
 pdfplumber==0.11.6
-Dirlin==0.4.0
+Dirlin==0.4.2
 pypdf==5.6.0
+SQLAlchemy==2.0.41
+pydantic==2.11.6
